@@ -1,5 +1,5 @@
 #ifndef __build_h
 #define __build_h
-#define NETXMS_VERSION_BUILD 7879
-#define NETXMS_VERSION_BUILD_STRING _T("7879")
+#define NETXMS_VERSION_BUILD 7880
+#define NETXMS_VERSION_BUILD_STRING _T("7880")
 #endif
