@@ -1,5 +1,5 @@
 package org.netxms.base;
 public final class BuildNumber {
-   public static final String TEXT = "7879";
-   public static final int NUMBER = 7879;
+   public static final String TEXT = "7880";
+   public static final int NUMBER = 7880;
 }
